--- a/portfolio.html
+++ b/portfolio.html
@@ -118,173 +118,43 @@
     <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="display-3">BC Ferries Redesign 2019</h1>
-            <h1 class="display-4">A case study looking at improving the digital experience of BC ferries</h1>
-            <div class="landing-image-bc-ferries">
+            <h1 class="display-3">Portfolio, Spring 2019</h1>
+            <h1 class="display-4">Exploring the usage of react.js for a unique web app portfolio experience</h1>
+            <div class="">
+
                 <div class="row">
                     <div class="col-sm-6">
+                            <div class="user-trigger-img"></div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="text-container hov" onclick="scrollToEl('timeline-out',null)">
+                        <div class="text-container hov">
                             <h2 class="bc-ferries-h2">
-                                Why The Case Study?
+                                About the porfolio
                             </h2>
-                            <p class="why-the-case-study-para">
-                                <a href="https://www.bcferries.com" target="_blank">BC ferries</a> is the largest ferry
-                                service is canada and serves more than 6 million people
-                                annually. it is the life line for thousands of British Columbians across the province.
+                            <p class="why-the-portfolio-para">
+                                I decieded to explore the usage of a native-like experince to display my design and
+                                development skillset in an attempt to ask users to spend more time on each page.
                             </p>
-                            <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of
-                                people,
-                                the service has failed to maintain and update their digital
-                                presence and provide a clear and positive digital user experience. As a British
-                                Columbian,
-                                and an engineer studying Systems Design, at the University of Waterloo,
-                                the potential for growth and improvement provided an inviting oppertunity for a
-                                re-design,
-                                examining the "pain points" for users during the digial experience
+                            <p>
+                                The attempt of the portfolio was to change the traditional format of a website to more
+                                of an <b>experience</b>. rather than using large amounts of text, I decieded
+                                to have the main focus of the portfolio be illustrations. the dark theme used is
+                                intended to create a change of scenery for users. The web app also conforms to a space
+                                them,
+                                something that has always been of interest to me.
                             </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="container">
-                <div class="timeline-outer" id="timeline-out">
-                    <div class="timeline" id="timeline-id">
-                        <div class="timeline-init" id="timeline-1">
-                            <p class="sec-t">1</p>
-                        </div>
-                        <div class="timeline-init" id="timeline-2">
-                            <p class="sec-t">2</p>
-                        </div>
-                        <div class="timeline-init" id="timeline-3">
-                            <p class="sec-t">3</p>
-                        </div>
-                        <div class="timeline-init" id="timeline-4">
-                            <p class="sec-t">4</p>
-                        </div>
-                        <div class="timeline-s-des hov" id="timeline-description-1"
-                            onclick="scrollToEl('user-interviews',null)">
-                            <p class="des-t">User interviews and brainstorming</p>
-                        </div>
-                        <div class="timeline-s-des hov" id="timeline-description-2"
-                            onclick="scrollToEl('mockups-and-protos',null)">
-                            <p class="des-t">Mockups and prototypes</p>
-                        </div>
-                        <div class="timeline-s-des hov" id="timeline-description-3"
-                            onclick="scrollToEl('design-and-deploy',null)">
-                            <p class="des-t">Design and development</p>
-                        </div>
-                        <div class="timeline-s-des hov" id="timeline-description-4"
-                            onclick="scrollToEl('release',null)">
-                            <p class="des-t">Deployement and feedback</p>
-                        </div>
-                        <div class="timeline-s-des-b1" id="timeline-description-1-b"></div>
-                        <div class="timeline-s-des-b1" id="timeline-description-2-b"></div>
-                        <div class="timeline-s-des-b1" id="timeline-description-3-b"></div>
-                        <div class="timeline-s-des-b1" id="timeline-description-4-b"></div>
-                        <div class="timeline-inner" id="timeline-inner-id">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row section-descriptions">
-        <div class="col-sm-6">
-            <div class="user-interviews-img"></div>
-        </div>
-        <div class="col-sm-6">
-            <div class="text-container">
-                <h2 class="bc-ferries-h2">
-                    User Interviews: the Problem Space
-                </h2>
-                <p class="why-the-case-study-para" id="user-interviews">
-                    Before I even start designing and first conduct user interviews and walkthroughs.
-                </p>
-                <p> What type of user interviews? I spend a total of 6 hours on ferries conducting user interviews. I
-                    asked
-                    patrons of all ages and backgrounds about their experience using the BC Ferries website and where
-                    there frustrations were.
-                    Talking to stakeholders builds empathy with users and helps identify the key problems for users.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="row section-descriptions">
-        <div class="col-sm-6">
-            <div class="text-container left-side">
-                <h2 class="bc-ferries-h2">
-                    Mockups and Prototypes
-                </h2>
-                <p class="why-the-case-study-para" id="mockups-and-protos">
-                    Once the problem space is defined, we can begin designing and prototyping solutions
-                </p>
-                <p>
-                    To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Indesign to
-                    creat mockups and prototypes
-                    that I can present to users for feedback. using theses tools, designs can be quickly adjusted and
-                    iterated for improvements
-                    before development even starts.
-                </p>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="design-img"></div>
-        </div>
-    </div>
-    <div class="row section-descriptions">
-        <div class="col-sm-6">
-            <div class="coding-img"></div>
-        </div>
-        <div class="col-sm-6">
+                            <div class="button-space">
+                                <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
+                                        class="button-des" id="portfolio-button">Explore Portfolio</button></a>
+                            </div>
 
-            <div class="text-container">
-                <h2 class="bc-ferries-h2">
-                    Design and Development
-                </h2>
-                <p class="why-the-case-study-para" id="design-and-deploy">
-                    With a stellar design, development and iterative testing can begin.
-                </p>
-                <p>
-                    The app will be built using <code>react.js</code> and <code>react-router-dom</code> as well as
-                    firebase. The backend will
-                    be hosted on firebase and leverage cloud functions and firebase's real-time database to maintain a
-                    NoSQL backend. Informaiton on live ferry
-                    status will use a variation of <a href="https://github.com/yasyf/bcferries"
-                        target="_blank">yasyf/bcferries</a> ported to Node.js. More Informaiton about
-                    the code and dev approach can be found on <a href="https://github.com/SammyRobensParadise/bcferries"
-                        target="_blank">github</a>.
-                </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="row section-descriptions">
-        <div class="col-sm-6">
-            <div class="text-container left-side">
-                <h2 class="bc-ferries-h2">
-                    Deployement and Feedback
-                </h2>
-                <p class="why-the-case-study-para" id="release">
-                    With a beta version passing tests, the project can be deployed!
-                </p>
-                <p>
-                    The web app will be deployed and hosted on Google's firebase, and the source code will be available
-                    on <a href="https://github.com/SammyRobensParadise/bcferries" target="_blank">github</a>. The case
-                    study will not be intended to serve as an alternative to the BC ferries website, but rather stand
-                    alone as a possible re-design
-                    to address some of the pain points experienced by users when using their website.
-                </p>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="deploy-img"></div>
-        </div>
-    </div>
+    
 
     <div class="section-link-out">
         <div class="container">
@@ -299,7 +169,8 @@
         </div>
     </div>
     <div class="bottom-padding"></div>
-    <script src="bc-ferries.js"></script>
+    <script src="portfolio.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.js"></script>
 </body>
 
 </html>
